--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.jpa.database=POSTGRESQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/migration
+spring.datasource.username=postgres
+spring.datasource.password=056409
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
